// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleSheet should insert a rule into the DOM when not in speedy 1`] = `
<html>
  <head>
    <style
      data-emotion=""
    >
      
      html { color: hotpink; }
    </style>
  </head>
  <body />
</html>
`;

exports[`StyleSheet should insert a rule with insertRule when in speedy 1`] = `
<html>
  <head>
    <style
      data-emotion=""
    >
      
    </style>
  </head>
  <body />
</html>
`;

exports[`StyleSheet should insert a rule with insertRule when in speedy 2`] = `
Array [
  CSSStyleRule {
    "__ends": 24,
    "__starts": 0,
    "parentRule": null,
    "parentStyleSheet": CSSStyleSheet {
      "cssRules": [Circular],
      "parentStyleSheet": null,
    },
    "selectorText": "html",
    "style": CSSStyleDeclaration {
      "0": "color",
      "__starts": 5,
      "_importants": Object {
        "color": "",
      },
      "color": "hotpink",
      "length": 1,
      "parentRule": [Circular],
    },
  },
]
`;

exports[`StyleSheet should remove its style elements from the document when flushed 1`] = `
<html>
  <head>
    <style
      data-emotion=""
    >
      
      html { color: hotpink; }
    </style>
  </head>
  <body />
</html>
`;

exports[`StyleSheet should remove its style elements from the document when flushed 2`] = `
<html>
  <head />
  <body />
</html>
`;

exports[`StyleSheet should set the data-emotion attribute to the key option 1`] = `
<html>
  <head>
    <style
      data-emotion="some-key"
    >
      
      html { color: hotpink; }
    </style>
  </head>
  <body />
</html>
`;

exports[`StyleSheet should use the container option instead of document.head to insert style elements into if it's passed 1`] = `
<html>
  <head />
  <body>
    <div>
      <style
        data-emotion=""
      >
        
        html { color: hotpink; }
      </style>
    </div>
  </body>
</html>
`;
